style: Increase input field text size on small screens for improved readability.

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <div>
             <label for="productUrl" class="block text-xs font-medium text-gray-700 mb-1">Link sản phẩm Shopee</label>
             <input type="url" id="productUrl" placeholder="https://shopee.vn/product/..."
-                class="w-full px-3 py-2.5 text-sm border border-gray-200 rounded focus:outline-none focus:ring-1 focus:ring-black" />
+                class="w-full px-3 py-2.5 text-base md:text-sm border border-gray-200 rounded focus:outline-none focus:ring-1 focus:ring-black" />
         </div>
 
         <!-- Affiliate ID Collapsible -->
@@ -64,7 +64,7 @@
             </button>
             <div id="affiliateInput" class="hidden mt-1">
                 <input type="text" id="affiliateId" value="17310100001"
-                    class="w-full px-3 py-2.5 text-sm font-mono border border-gray-200 rounded focus:outline-none focus:ring-1 focus:ring-black" />
+                    class="w-full px-3 py-2.5 text-base md:text-sm font-mono border border-gray-200 rounded focus:outline-none focus:ring-1 focus:ring-black" />
             </div>
         </div>
 
@@ -85,7 +85,7 @@
     <div id="resultSection" class="hidden mt-6">
         <div class="mb-3">
             <input type="text" id="resultLink" readonly
-                class="w-full px-3 py-2.5 text-sm font-mono bg-gray-50 border border-gray-200 rounded" />
+                class="w-full px-3 py-2.5 text-base md:text-sm font-mono bg-gray-50 border border-gray-200 rounded" />
         </div>
         <div class="flex gap-2">
             <button id="copyBtn"
