--- a/index.html
+++ b/index.html
@@ -81,8 +81,21 @@
         </div>
     </div>
 
+    <!-- Product Info (Dynamic) -->
+    <div id="productInfo" class="hidden mt-6 p-4 border border-gray-100 rounded-lg bg-gray-50 flex gap-4">
+        <img id="productImage" src="" alt="Product" class="w-20 h-20 object-cover rounded border border-gray-200" />
+        <div class="flex-1 min-w-0">
+            <h3 id="productName" class="text-sm font-medium text-gray-900 truncate-2-lines line-clamp-2 mb-1"></h3>
+            <div class="flex items-center gap-2">
+                <span id="productPrice" class="text-sm font-semibold text-red-600"></span>
+                <span id="productCommission"
+                    class="text-xs text-green-600 font-medium bg-green-50 px-1.5 py-0.5 rounded"></span>
+            </div>
+        </div>
+    </div>
+
     <!-- Result -->
-    <div id="resultSection" class="hidden mt-6">
+    <div id="resultSection" class="hidden mt-4">
         <div class="mb-3">
             <input type="text" id="resultLink" readonly
                 class="w-full px-3 py-2.5 text-base md:text-sm font-mono bg-gray-50 border border-gray-200 rounded" />
@@ -112,6 +125,12 @@
             const copyBtn = document.getElementById('copyBtn');
             const visitBtn = document.getElementById('visitBtn');
 
+            const productInfo = document.getElementById('productInfo');
+            const productImage = document.getElementById('productImage');
+            const productName = document.getElementById('productName');
+            const productPrice = document.getElementById('productPrice');
+            const productCommission = document.getElementById('productCommission');
+
             let isOpen = false;
             toggleBtn.addEventListener('click', () => {
                 isOpen = !isOpen;
@@ -119,23 +138,76 @@
                 toggleBtn.textContent = isOpen ? 'Affiliate ID ▼' : 'Affiliate ID';
             });
 
-            generateBtn.addEventListener('click', () => {
+            generateBtn.addEventListener('click', async () => {
                 const url = productUrlInput.value.trim();
+                const affId = affiliateIdInput.value.trim() || '17310100001';
+
                 if (!url) {
                     alert('Vui lòng nhập link sản phẩm Shopee.');
                     return;
                 }
 
-                const valid = ['shopee.vn', 'shopee.sg', 'shopee.co.id', 'shopee.ph', 'shopee.th', 'shopee.com.my'];
+                const valid = ['shopee.vn', 'shopee.sg', 'shopee.co.id', 'shopee.ph', 'shopee.th', 'shopee.com.my', 's.shopee.vn'];
                 if (!valid.some(d => url.includes(d))) {
                     alert('Link phải từ Shopee (shopee.vn, shopee.sg, v.v.)');
                     return;
                 }
 
-                const affId = affiliateIdInput.value.trim() || '17310100001';
-                const encoded = encodeURIComponent(url);
-                resultLink.value = `https://s.shopee.vn/an_redir?origin_link=${encoded}&affiliate_id=${affId}`;
-                resultSection.classList.remove('hidden');
+                const originalBtnText = generateBtn.textContent;
+                generateBtn.textContent = 'Đang xử lý...';
+                generateBtn.disabled = true;
+
+                try {
+                    const response = await fetch("https://api.tui3gang.com/api/v1/shopee/get-info-product", {
+                        "headers": {
+                            "accept": "application/json, text/plain, */*",
+                            "content-type": "application/json",
+                        },
+                        "body": JSON.stringify({
+                            "url": url,
+                            "idUser": "notlogin"
+                        }),
+                        "method": "POST",
+                    });
+
+                    if (!response.ok) {
+                        throw new Error('API request failed');
+                    }
+
+                    const data = await response.json();
+
+                    if (data && data.length > 0 && data[0].productLink) {
+                        const product = data[0];
+                        const productLink = product.productLink;
+                        const encoded = encodeURIComponent(productLink);
+
+                        // Populate product info
+                        productImage.src = product.imageUrl;
+                        productName.textContent = product.productName;
+                        productPrice.textContent = new Intl.NumberFormat('vi-VN', { style: 'currency', currency: 'VND' }).format(product.priceMin);
+
+                        if (product.commission > 0) {
+                            productCommission.textContent = `Hoa hồng: +${new Intl.NumberFormat('vi-VN', { style: 'currency', currency: 'VND' }).format(product.commission / 0.6)}`;
+                            productCommission.classList.remove('hidden');
+                        } else {
+                            productCommission.classList.add('hidden');
+                        }
+
+                        productInfo.classList.remove('hidden');
+
+                        resultLink.value = `https://s.shopee.vn/an_redir?origin_link=${encoded}&affiliate_id=${affId}&sub_id=webgenerate`;
+                        resultSection.classList.remove('hidden');
+                        productInfo.scrollIntoView({ behavior: 'smooth' });
+                    } else {
+                        alert('Không tìm thấy thông tin sản phẩm. Vui lòng kiểm tra lại link.');
+                    }
+                } catch (error) {
+                    console.error('Error:', error);
+                    alert('Có lỗi xảy ra khi lấy thông tin sản phẩm. Vui lòng thử lại sau.');
+                } finally {
+                    generateBtn.textContent = originalBtnText;
+                    generateBtn.disabled = false;
+                }
             });
 
             copyBtn.addEventListener('click', () => {
@@ -155,6 +227,7 @@
             resetBtn.addEventListener('click', () => {
                 productUrlInput.value = '';
                 resultSection.classList.add('hidden');
+                productInfo.classList.add('hidden');
             });
         });
     </script>
