Update result link URL for Shopee redirecti

--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
 
                         productInfo.classList.remove('hidden');
 
-                        resultLink.value = `https://shope.ee/an_redir?origin_link=${encoded}&affiliate_id=${affId}&sub_id=webgenerate`;
+                        resultLink.value = `https://s.shopee.vn/an_redir?origin_link=${encoded}&affiliate_id=${affId}&sub_id=webgenerate`;
                         resultSection.classList.remove('hidden');
                         productInfo.scrollIntoView({ behavior: 'smooth' });
                     } else {
